fix(crops)(reworked) - Allow initial crops available to save when it's new image plus increased spacing b/w metadata fields to prevent labels sticking with char-counts above

--- a/scripts/core/upload/styles/upload.scss
+++ b/scripts/core/upload/styles/upload.scss
@@ -651,7 +651,7 @@ edit image modal
     }
     &-metadata {
         > div {
-            margin-bottom: 12px;
+            margin-bottom: 25px;
         }
         label {
             font-size: 11px;
